--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,22 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Captain Blood</i><br/>
-			was published in YEAR by<br/>
-			<a href="WIKILINK">Rafael Sabatini</a>.</p>
+			was published in 1922 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Rafael_Sabatini">Rafael Sabatini</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCERLINK">PRODUCER</a>,<br/>
-			and is based on a transcription produced in YEAR by<br/>
-			<span class="name">TRANSCRIBER1</span>, <span class="name">TRANSCRIBER2</span>, and <a href="http://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<a href="PRODUCERLINK">Cory Sutherland</a>,<br/>
+			and is based on a transcription produced in 2008 by<br/>
+			<span class="name">An Anonymous Volunteer</span>, <span class="name">David Widger</span>, and <a href="http://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
-			<a href="PGLINK">Project Gutenberg</a><br/>
+			<a href="https://www.gutenberg.org/ebooks/1965">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IALINK">Internet Archive</a>.</p>
+			<a href="https://babel.hathitrust.org/cgi/pt?id=uva.x000600659;view=thumb;seq=5">Hathi Trust</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="WIKILINK">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Captain Blood</i>,<br/>
+			an illustration painted for the dust cover of Captain Blood in 1922 by<br/>
+			<a href="https://en.wikipedia.org/wiki/N._C._Wyeth">N. C. Wyeth</a>.<br/>
 			The cover and title pages feature the<br/>
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
