--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: http://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
 		<title>Colophon</title>
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="PRODUCERLINK">Cory Sutherland</a>,<br/>
 			and is based on a transcription produced in 2008 by<br/>
-			<span class="name">An Anonymous Volunteer</span>, <span class="name">David Widger</span>, and <a href="http://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<span class="name">An Anonymous Volunteer</span>, <span class="name">David Widger</span>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1965">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
@@ -34,7 +34,7 @@
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
 			<p>This is the first edition of this ebook.<br/>
 			This edition was released on<br/>
-			<span class="release-date">January 1, 1900, 12:00 <abbr class="time eoc"><abbr class="time">a.m.</abbr></abbr></span><br/>
+			<span class="release-date">October 30, 2017, 3:43 <abbr class="time eoc">a.m.</abbr></span><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a class="raw-url" href="https://standardebooks.org/ebooks/rafael-sabatini/captain-blood">standardebooks.org/ebooks/rafael-sabatini/captain-blood</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a class="raw-url" href="https://standardebooks.org">standardebooks.org</a>.</p>
