--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: http://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
 		<title>Table of Contents</title>
@@ -14,97 +14,97 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"> <span epub:type="z3998:roman">I</span>: <span epub:type="subtitle">The Messenger</span></a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: The Messenger</a>
 				</li>
 				<li>
-					<a href="text/chapter-2.xhtml"> <span epub:type="z3998:roman">II</span>: <span epub:type="subtitle">Kirke’s Dragoons</span></a>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Kirke’s Dragoons</a>
 				</li>
 				<li>
-					<a href="text/chapter-3.xhtml"> <span epub:type="z3998:roman">III</span>: <span epub:type="subtitle">The Lord Chief Justice</span></a>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Lord Chief Justice</a>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml"> <span epub:type="z3998:roman">IV</span>: <span epub:type="subtitle">Human Merchandise</span></a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Human Merchandise</a>
 				</li>
 				<li>
-					<a href="text/chapter-5.xhtml"> <span epub:type="z3998:roman">V</span>: <span epub:type="subtitle">Arabella Bishop</span></a>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Arabella Bishop</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml"> <span epub:type="z3998:roman">VI</span>: <span epub:type="subtitle">Plans of Escape</span></a>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Plans of Escape</a>
 				</li>
 				<li>
-					<a href="text/chapter-7.xhtml"> <span epub:type="z3998:roman">VII</span>: <span epub:type="subtitle">Pirates</span></a>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Pirates</a>
 				</li>
 				<li>
-					<a href="text/chapter-8.xhtml"> <span epub:type="z3998:roman">VIII</span>: <span epub:type="subtitle">Spaniards</span></a>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Spaniards</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml"> <span epub:type="z3998:roman">XIV</span>: <span epub:type="subtitle">The Rebels-Convict</span></a>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">XIV</span>: The Rebels-Convict</a>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml"> <span epub:type="z3998:roman">X</span>: <span epub:type="subtitle">Don Diego</span></a>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Don Diego</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml"> <span epub:type="z3998:roman">XI</span>: <span epub:type="subtitle">Filial Piety</span></a>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Filial Piety</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"> <span epub:type="z3998:roman">XII</span>: <span epub:type="subtitle">Don Pedro Sangre</span></a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Don Pedro Sangre</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml"> <span epub:type="z3998:roman">XIII</span>: <span epub:type="subtitle">Tortuga</span></a>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Tortuga</a>
 				</li>
 				<li>
-					<a href="text/chapter-14.xhtml"> <span epub:type="z3998:roman">XIV</span>: <span epub:type="subtitle">Levasseur’s Heroics</span></a>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Levasseur’s Heroics</a>
 				</li>
 				<li>
-					<a href="text/chapter-15.xhtml"> <span epub:type="z3998:roman">XV</span>: <span epub:type="subtitle">The Ransom</span></a>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Ransom</a>
 				</li>
 				<li>
-					<a href="text/chapter-16.xhtml"> <span epub:type="z3998:roman">XVI</span>: <span epub:type="subtitle">The Trap</span></a>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: The Trap</a>
 				</li>
 				<li>
-					<a href="text/chapter-17.xhtml"> <span epub:type="z3998:roman">XVII</span>: <span epub:type="subtitle">The Dupes</span></a>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: The Dupes</a>
 				</li>
 				<li>
-					<a href="text/chapter-18.xhtml"> <span epub:type="z3998:roman">XVIII</span>: <span epub:type="subtitle">The <i epub:type="se:name.vessel.ship">Milagrosa</i></span></a>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The <i epub:type="se:name.vessel.ship">Milagrosa</i></a>
 				</li>
 				<li>
-					<a href="text/chapter-19.xhtml"> <span epub:type="z3998:roman">XIX</span>: <span epub:type="subtitle">The Meeting</span></a>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: The Meeting</a>
 				</li>
 				<li>
-					<a href="text/chapter-20.xhtml"> <span epub:type="z3998:roman">XX</span>: <span epub:type="subtitle">Thief and Pirate</span></a>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Thief and Pirate</a>
 				</li>
 				<li>
-					<a href="text/chapter-21.xhtml"> <span epub:type="z3998:roman">XXI</span>: <span epub:type="subtitle">The Service of King James</span></a>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Service of King James</a>
 				</li>
 				<li>
-					<a href="text/chapter-22.xhtml"> <span epub:type="z3998:roman">XXII</span>: <span epub:type="subtitle">Hostilities</span></a>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Hostilities</a>
 				</li>
 				<li>
-					<a href="text/chapter-23.xhtml"> <span epub:type="z3998:roman">XXIII</span>: <span epub:type="subtitle">Hostages</span></a>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Hostages</a>
 				</li>
 				<li>
-					<a href="text/chapter-24.xhtml"> <span epub:type="z3998:roman">XXIV</span>: <span epub:type="subtitle">War</span></a>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: War</a>
 				</li>
 				<li>
-					<a href="text/chapter-25.xhtml"> <span epub:type="z3998:roman">XXV</span>: <span epub:type="subtitle">The Service of King Louis</span></a>
+					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: The Service of King Louis</a>
 				</li>
 				<li>
-					<a href="text/chapter-26.xhtml"> <span epub:type="z3998:roman">XXVI</span>: <span epub:type="subtitle">M. De Rivarol</span></a>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: M. De Rivarol</a>
 				</li>
 				<li>
-					<a href="text/chapter-27.xhtml"> <span epub:type="z3998:roman">XXVII</span>: <span epub:type="subtitle">Cartagena</span></a>
+					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Cartagena</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"> <span epub:type="z3998:roman">XXVIII</span>: <span epub:type="subtitle">The Honour of M. De Rivarol</span></a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: The Honour of M. De Rivarol</a>
 				</li>
 				<li>
-					<a href="text/chapter-29.xhtml"> <span epub:type="z3998:roman">XXIX</span>: <span epub:type="subtitle">The Service of King William</span></a>
+					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Service of King William</a>
 				</li>
 				<li>
-					<a href="text/chapter-30.xhtml"> <span epub:type="z3998:roman">XXX</span>: <span epub:type="subtitle">The Last Fight of the <i epub:type="se:name.vessel.ship">Arabella</i></span></a>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: The Last Fight of the <i epub:type="se:name.vessel.ship">Arabella</i></a>
 				</li>
 				<li>
-					<a href="text/chapter-31.xhtml"> <span epub:type="z3998:roman">XXXI</span>: <span epub:type="subtitle">His Excellency the Governor</span></a>
+					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: His Excellency the Governor</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
