--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,23 +17,25 @@
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCERLINK">Cory Sutherland</a>,<br/>
+			<span class="name">Cory Sutherland</span>,<br/>
 			and is based on a transcription produced in 2008 by<br/>
 			<span class="name">An Anonymous Volunteer</span>, <span class="name">David Widger</span>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1965">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://babel.hathitrust.org/cgi/pt?id=uva.x000600659;view=thumb;seq=5">Hathi Trust</a>.</p>
+			<a href="https://catalog.hathitrust.org/Record/009790453">Hathi Trust</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">Captain Blood</i>,<br/>
-			an illustration painted for the dust cover of Captain Blood in 1922 by<br/>
-			<a href="https://en.wikipedia.org/wiki/N._C._Wyeth">N. C. Wyeth</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Captain Keitt</i>,<br/>
+			an illustration from The Ruby of Kishmoor originally published in Harper's Magazine, August, 1907 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Howard_Pyle">Howard Pyle</a>.<br/>
 			The cover and title pages feature the<br/>
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
-			<p>This is the first edition of this ebook.<br/>
+			<p>This is the <span class="revision-number">2nd</span> edition of this ebook.<br/>
 			This edition was released on<br/>
+			<span class="revision-date">November 7, 2017, 4:05 <abbr class="time eoc">a.m.</abbr></span><br/>
+			The first edition was released on<br/>
 			<span class="release-date">October 30, 2017, 3:43 <abbr class="time eoc">a.m.</abbr></span><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a class="raw-url" href="https://standardebooks.org/ebooks/rafael-sabatini/captain-blood">standardebooks.org/ebooks/rafael-sabatini/captain-blood</a>.</p>
