--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -38,7 +38,7 @@
 					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Spaniards</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">XIV</span>: The Rebels-Convict</a>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: The Rebels-Convict</a>
 				</li>
 				<li>
 					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Don Diego</a>
@@ -89,13 +89,13 @@
 					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: The Service of King Louis</a>
 				</li>
 				<li>
-					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: M. De Rivarol</a>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: M. de Rivarol</a>
 				</li>
 				<li>
 					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Cartagena</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: The Honour of M. De Rivarol</a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: The Honour of M. de Rivarol</a>
 				</li>
 				<li>
 					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Service of King William</a>
