--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,18 +23,18 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1965">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://catalog.hathitrust.org/Record/009790453">Hathi Trust</a>.</p>
+			<a href="https://catalog.hathitrust.org/Record/009790453">Hathi Trust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Captain Keitt</i>,<br/>
-			an illustration from The Ruby of Kishmoor originally published in Harper's Magazine, August, 1907 by<br/>
+			an illustration completed in 1907 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Howard_Pyle">Howard Pyle</a>.<br/>
 			The cover and title pages feature the<br/>
 			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
-			<p>This is the <span class="revision-number">2nd</span> edition of this ebook.<br/>
+			<p>This is the <span class="revision-number">3rd</span> edition of this ebook.<br/>
 			This edition was released on<br/>
-			<span class="revision-date">November 7, 2017, 4:05 <abbr class="time eoc">a.m.</abbr></span><br/>
+			<span class="revision-date">November 9, 2017, 5:11 <abbr class="time eoc">a.m.</abbr></span><br/>
 			The first edition was released on<br/>
 			<span class="release-date">October 30, 2017, 3:43 <abbr class="time eoc">a.m.</abbr></span><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
