--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -89,13 +89,13 @@
 					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: The Service of King Louis</a>
 				</li>
 				<li>
-					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: M. de Rivarol</a>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: <abbr>M.</abbr> de Rivarol</a>
 				</li>
 				<li>
 					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Cartagena</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: The Honour of M. de Rivarol</a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: The Honour of <abbr>M.</abbr> de Rivarol</a>
 				</li>
 				<li>
 					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Service of King William</a>
