--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">Captain Blood</i><br/>
 			was published in 1922 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Rafael_Sabatini">Rafael Sabatini</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<b class="name">Cory Sutherland</b>,<br/>
 			and is based on a transcription produced in 2008 by<br/>
