--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,9 +17,9 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<b class="name">Cory Sutherland</b>,<br/>
+			<b epub:type="z3998:personal-name">Cory Sutherland</b>,<br/>
 			and is based on a transcription produced in 2008 by<br/>
-			<b class="name">An Anonymous Volunteer</b>, <b class="name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">An Anonymous Volunteer</b>, <b epub:type="z3998:personal-name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1965">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
