Tweak semantics in colophon

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<b epub:type="z3998:personal-name">Cory Sutherland</b>,<br/>
 			and is based on a transcription produced in 2008 by<br/>
-			<b epub:type="z3998:personal-name">An Anonymous Volunteer</b>, <b epub:type="z3998:personal-name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b>An Anonymous Volunteer</b>, <b epub:type="z3998:personal-name">David Widger</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1965">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
